validation and user priveledge

--- a/jobMarket/src/app/company/company.component.css
+++ b/jobMarket/src/app/company/company.component.css
@@ -53,3 +53,12 @@ img{
 hr{
     border-color: bisque
 }
+
+h4,h3,h2,h1{
+    text-align: center
+}
+
+#button{
+    text-align: center;
+    margin:auto
+}
