--- a/jobMarket/src/app/role/role.component.html
+++ b/jobMarket/src/app/role/role.component.html
@@ -1,5 +1,5 @@
 <h1 style = "text-align: center">{{role.roleName}}</h1>
-<h3 style = "text-align: center">Category:{{role.category}}</h3>
+<h3 style = "text-align: center">Category: {{role.category}}</h3>
 <h4 style = "text-align: center" [hidden]="primarySkill==undefined">Key Skill: {{primarySkill}}</h4>
 <br>
 <div>
@@ -18,7 +18,7 @@
 <br>
 <table id="customers">
     <tr>
-        <th>Vacancy</th>
+        <th>This Years Vacancies</th>
         <th>Salary</th>
         <!-- <th>Year</th> -->
         <!-- <th>Skills</th> -->
@@ -27,7 +27,7 @@
     <ng-container *ngFor = "let vac of role.vacancies">
         <tr *ngIf = "vac.uploadYear == 2019">
             <td><button mat-button (click)="openVacancy(vac.vacancyId)">{{vac.title}}</button></td>
-            <td>{{vac.salary}}</td>
+            <td>£{{vac.salary}}</td>
             <!-- <td>{{vac.uploadYear}}</td>  -->
             <!-- <td *ngIf="vac.vacancySkills.length>0">{{vac.vacancySkills[0].skill}}</td>
             <td *ngIf="vac.vacancySkills.length>1">{{vac.vacancySkills[1].skill}}</td> -->
