--- a/jobMarket/src/app/register/register.component.html
+++ b/jobMarket/src/app/register/register.component.html
@@ -22,7 +22,7 @@
 </div>
 </form>
 
-<div *ngIf="isError == true">Passwords do no match</div>
+<div *ngIf="isError == true">Passwords do not match</div>
 <div *ngIf="isErrorShort == true">Passwords needs atleast 6 characters</div>
 <div *ngIf="isUniqueEmail == false">Email is already registered. Please enter a new email</div>
 <div *ngIf="isEmailError == true">Please enter valid e-mail</div>
