--- a/jobMarket/src/app/role/role.component.css
+++ b/jobMarket/src/app/role/role.component.css
@@ -24,7 +24,7 @@ table{
   
   #customers tr:nth-child(even){background-color: #f2f2f2;}
   
-  #customers tr:hover {background-color: #ddd;}
+  #customers tr:nth-child(odd) {background-color: #ddd;}
   
   #customers th {
     padding-top: 12px;
