--- a/jobMarket/src/app/userlogin/userlogin.component.html
+++ b/jobMarket/src/app/userlogin/userlogin.component.html
@@ -1,5 +1,4 @@
 <div class="userLogin">
-        
         <mat-form-field  class="example-full-width">
                 <input  matInput [(ngModel)]="username" placeholder="Username"  name="username" [ngModelOptions]="{standalone: true}" >
         </mat-form-field> 
@@ -7,11 +6,9 @@
         <mat-form-field class="example-full-width">
                 <input matInput [(ngModel)]="password" placeholder="Password"  name="password" [ngModelOptions]="{standalone: true}" type="password">
         </mat-form-field>
-
 <hr> 
-
         <button mat-raised-button color="accent" (click)="logInUser()">Log In</button>
 </div>
-
+<!-- show error if validation fails -->
 <div *ngIf="noError == false">Username Or Password Are Incorrect</div>
 
