--- a/jobMarket/src/app/role-dashboard-data-table/role-dashboard-data-table.component.html
+++ b/jobMarket/src/app/role-dashboard-data-table/role-dashboard-data-table.component.html
@@ -64,10 +64,11 @@
     
   </table>
 
+  <!-- allow pagination of data for quicker load -->
   <mat-paginator #paginator
       [length]="dataSource?.data.length"
       [pageIndex]="0"
-      [pageSize]="50"
-      [pageSizeOptions]="[10, 25, 50]">
+      [pageSize]="25"
+      [pageSizeOptions]="[10, 25, 50, 100]">
   </mat-paginator>
 </div>
