--- a/jobMarket/src/app/user/user.component.html
+++ b/jobMarket/src/app/user/user.component.html
@@ -10,7 +10,6 @@
     <tr>
     <td >Username:</td>
     <td >{{username}}</td>
-
     </tr>
     <tr>
     <td>Email:</td>
@@ -24,6 +23,7 @@
 <p *ngIf="passwordError" style="text-align: center">Incorrect password entered.</p>
 <hr width="80%">
 
+<!-- display all skills, highlight those which are applied to the user -->
 <h3>Skills</h3>
 <div id="skillTable" *ngIf="priveledge">
         <mat-chip-list #chipList>
@@ -44,6 +44,7 @@
     </mat-chip-list>
 </div>
 
+<!-- if userId doesnt match user page, display uneditable data -->
 <div id="skillTable" *ngIf="!priveledge">
         <mat-chip-list #chipList>
         <span *ngFor="let aS of antiSkills; let i = index">
@@ -67,6 +68,7 @@
 
 <h3>My Saved Vacancies</h3>
 
+<!-- show all vacacnies attached to user with drop button -->
 <div id="savedVacancies">
     <td>
     </td>
