--- a/jobMarket/src/app/vacancy-dashboard-data-table/vacancy-dashboard-data-table.component.html
+++ b/jobMarket/src/app/vacancy-dashboard-data-table/vacancy-dashboard-data-table.component.html
@@ -1,4 +1,5 @@
 <mat-form-field >
+  <!-- seach bar filter -->
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
 </mat-form-field>
 
@@ -16,36 +17,41 @@
     <ng-container matColumnDef="location">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Location</th>
         <td mat-cell *matCellDef="let vac">{{vac.location}}</td>
-      </ng-container>
+    </ng-container>
 
+    <!-- company column -->
     <ng-container matColumnDef="company">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
         <td mat-cell *matCellDef="let vac">{{vac.thisCompany.companyName}}</td>
     </ng-container>
 
-      <ng-container matColumnDef="title">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
-          <td mat-cell *matCellDef="let vac"><button mat-raised-button (click)="openVacancy(vac.vacancyId)">{{vac.title}}</button></td>
-      </ng-container>
+    <!-- title column -->
+    <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
+        <td mat-cell *matCellDef="let vac"><button mat-raised-button (click)="openVacancy(vac.vacancyId)">{{vac.title}}</button></td>
+    </ng-container>
 
-      <ng-container matColumnDef="uploadYear">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Upload Year</th>
-          <td mat-cell *matCellDef="let vac">{{vac.uploadYear}}</td>
-      </ng-container>
+    <!-- upload year column -->
+    <ng-container matColumnDef="uploadYear">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Upload Year</th>
+        <td mat-cell *matCellDef="let vac">{{vac.uploadYear}}</td>
+    </ng-container>
 
-      <ng-container matColumnDef="salary">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Salary</th>
-          <td mat-cell *matCellDef="let vac">£{{vac.salary}}</td>
-      </ng-container>
+    <!-- salary column -->
+    <ng-container matColumnDef="salary">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Salary</th>
+        <td mat-cell *matCellDef="let vac">£{{vac.salary}}</td>
+    </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns" ></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
+  <!-- pagination of table -->
   <mat-paginator #paginator
       [length]="dataSource?.data.length"
       [pageIndex]="0"
-      [pageSize]="50"
-      [pageSizeOptions]="[25, 50, 100, 250]">
+      [pageSize]="25"
+      [pageSizeOptions]="[25, 50, 100, 200]">
   </mat-paginator>
 </div>
