--- a/jobMarket/src/app/welcome/welcome.component.html
+++ b/jobMarket/src/app/welcome/welcome.component.html
@@ -1,17 +1,16 @@
 <div id="back" style="text-align:center">
     <br>
-    <h1>
-        <strong>TechJobs</strong>
-    </h1>
+        <h1>
+            <strong>TechJobs</strong>
+        </h1>
     <br> 
-    <!-- <img width="100" alt="Angular Logo" routerLink="/role-dashboard" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/Circle-icons-computer.svg/1024px-Circle-icons-computer.svg.png"> -->
 <br> 
 <h4 style="text-align:center">Search Jobs Across the Tech Sector</h4>
 <br>
 </div>
-
 <div style="text-align:center"> 
-<br> 
+<br>
+<!-- only show login buttons if logged out -->
 <span *ngIf="myUserId==-1 && myCompanyId==-1">
 <div color="primary" class="front-button"> 
     <button mat-raised-button (click)="openUser()">User</button><br><br>  
@@ -19,6 +18,7 @@
     <button mat-raised-button (click)="openAsAdmin()">Admin</button>
 </div>
 </span>
+<!-- if logged in as company -->
 <span *ngIf="myUserId==-1 && myCompanyId!=-1">
 <h2>You are logged in as {{myCompanyName}}</h2>
 <h4>Add vacancies, view role statistics and edit your company profile!</h4>
@@ -26,6 +26,7 @@
 <button mat-raised-button class="dashButtons" routerLink="/role-dashboard" color="accent">Role Dashboard</button>
 <button mat-raised-button class="dashButtons" routerLink="/vacancy-dashboard" color="accent">Vacancy Dashboard</button>
 </span>
+<!-- if logged in as user -->
 <span *ngIf="myUserId!=-1 && myUserId!=0">
 <h2>You are logged in as {{myUsername}}</h2>
 <h4>Save jobs, view role statistics and edit your user profile!</h4>
@@ -33,6 +34,7 @@
 <button mat-raised-button class="dashButtons" routerLink="/role-dashboard" color="accent">Role Dashboard</button>
 <button mat-raised-button class="dashButtons" routerLink="/vacancy-dashboard" color="accent">Vacancy Dashboard</button>
 </span>
+<!-- if logged in as admin -->
 <span *ngIf="myUserId==0 && myCompanyId==-1">
 <h2>You are logged in as an Admin</h2>
 <h4>You have full priveleges across the site.</h4>
