--- a/jobMarket/src/app/company/company.component.html
+++ b/jobMarket/src/app/company/company.component.html
@@ -1,7 +1,7 @@
 <div id="back">
     <br>
     <h2 style="text-align: center; border-color: white">Your Profile</h2>
-    <h4>Hello {{companyName}}</h4>
+    <h4>Hello {{companyName}}!</h4>
 </div>
 <br>
 <h3>{{hqLocation}}</h3>
