--- a/jobMarket/src/app/user/user.component.html
+++ b/jobMarket/src/app/user/user.component.html
@@ -5,7 +5,7 @@
     <br>
 </div>
 <br>
-<div id="editDiv" *ngIf="priveledge">
+<div id="editDiv" *ngIf="priveledge || myUserId == 0">
 <table id="details">
     <tr>
     <td >Username:</td>
