changed myUserId of admin

--- a/jobMarket/src/app/user-datatable/user-datatable.component.css
+++ b/jobMarket/src/app/user-datatable/user-datatable.component.css
@@ -1,6 +1,13 @@
 .full-width-table {
   width: 70%;
   margin: auto;
-  }
+}
 
-
+#back{
+  background-image: url("https://conversionxl.com/wp-content/uploads/2018/09/coding-language.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center; 
+  color: white;
+  text-align: center;
+}
