--- a/jobMarket/src/app/nav-bar/nav-bar.component.html
+++ b/jobMarket/src/app/nav-bar/nav-bar.component.html
@@ -7,15 +7,15 @@
     <mat-nav-list id="sideMenu">
       <a mat-list-item routerLink="/role-dashboard">Role</a>
       <a mat-list-item routerLink="/vacancy-dashboard">Vacancy</a>
-      <span *ngIf="myUserId!=-1 && myUserId!=0">
+      <span *ngIf="myUserId!=-1 && myUserId!=1">
         <a mat-list-item routerLink="/user/{{myUserId}}"><mat-icon>account_circle</mat-icon>User Details</a>
       </span>
       <span *ngIf="myCompanyId!=-1">
         <a mat-list-item routerLink="/company/{{myCompanyId}}"><mat-icon>account_circle</mat-icon>User Details</a>
       </span>
-      <span *ngIf="myUserId==0">
+      <span *ngIf="myUserId==1">
           <button mat-menu-item routerLink="/company-dashboard"><mat-icon>work</mat-icon>Company Dashboard</button>
-          <button mat-menu-item routerLink="/user-dashboard"><mat-icon>people</mat-icon>User Dashboard</button> 
+          <button mat-menu-item routerLink="/viewUsers"><mat-icon>people</mat-icon>User Dashboard</button> 
       </span>
     </mat-nav-list>
   </mat-sidenav>
@@ -39,15 +39,15 @@
       <!-- <button mat-button (click)="logOut()" routerLink="/"><mat-icon>power_settings_new</mat-icon></button> -->
       <button mat-button [matMenuTriggerFor]="menu"><mat-icon>menu</mat-icon></button>
         <mat-menu #menu="matMenu" >
-          <span *ngIf="myUserId!=-1 && myUserId!=0">
+          <span *ngIf="myUserId!=-1 && myUserId!=1">
             <button mat-menu-item routerLink="/user/{{myUserId}}"><mat-icon>account_circle</mat-icon>User Details</button>
           </span>
           <span *ngIf="myCompanyId!=-1">
               <button mat-menu-item routerLink="/company/{{myCompanyId}}"><mat-icon>account_circle</mat-icon>Company Details</button>
           </span>
-          <span *ngIf="myUserId==0">
+          <span *ngIf="myUserId==1">
             <button mat-menu-item routerLink="/company-dashboard"><mat-icon>work</mat-icon>Company Dashboard</button>
-            <button mat-menu-item routerLink="/user-dashboard"><mat-icon>people</mat-icon>User Dashboard</button> 
+            <button mat-menu-item routerLink="/viewUsers"><mat-icon>people</mat-icon>User Dashboard</button> 
           </span>
           <button mat-menu-item disabled><mat-icon>brightness_6</mat-icon>Darkmode<mat-slide-toggle (change)="changeTheme()" checked="dark" [(ngModel)]="dark"></mat-slide-toggle></button>
           <button mat-menu-item (click)="logOut()" routerLink="/"><mat-icon>power_settings_new</mat-icon>Log Out</button>
