--- a/jobMarket/src/app/user-datatable/user-datatable.component.html
+++ b/jobMarket/src/app/user-datatable/user-datatable.component.html
@@ -1,14 +1,21 @@
+<div id="back">
+    <br>
+        <h2>User Dashboard</h2>
+    <br>
+</div>
+<br>
+
 <div class="mat-elevation-z8">
   <table mat-table class="full-width-table" matSort aria-label="Elements" [dataSource]="dataSource">
     <!-- Id Column -->
     <ng-container matColumnDef="username">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Username</th>
       <td  mat-cell *matCellDef="let row"><button mat-raised-button routerLink="/user/{{row.userId}}"> {{row.username}} </button></td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
       <td mat-cell *matCellDef="let row">{{row.email}}</td>
     </ng-container>
 
